added scheduledates service added order items

--- a/src/main/resources/static/frontend/styles/shared-styles.html
+++ b/src/main/resources/static/frontend/styles/shared-styles.html
@@ -40,7 +40,7 @@
       :host([theme="left"]) [part="overlay"],
       :host([theme="right"]) [part="overlay"] {
         flex: 1;
-        max-width: 45em;
+        max-width: 50em;
       }
 
       :host([theme="top-right"]) [part="overlay"] {
@@ -124,7 +124,7 @@
         border-top: 1px solid var(--lumo-shade-5pct);
       }
 
-      /* a special grid theme for the bakery storefront view */
+      /* a special grid theme for the market storefront view */
       :host([theme~="orders"]) {
         background: transparent;
       }
@@ -243,6 +243,8 @@
         flex-direction: column;
         flex: auto;
       }
+
+
     </style>
     </template>
 </dom-module>
