add repayment view and editor

--- a/src/main/resources/static/frontend/styles/shared-styles.html
+++ b/src/main/resources/static/frontend/styles/shared-styles.html
@@ -43,7 +43,8 @@
       }
 
       :host([theme="left"]) [part="overlay"],
-      :host([theme="right"]) [part="overlay"] {
+      :host([theme="right"]) [part="overlay"],
+      :host([theme="center"]) [part="overlay"]{
         flex: 1;
         max-width: 50em;
       }
